Set adaptive basic styles

--- a/source/index.html
+++ b/source/index.html
@@ -43,116 +43,145 @@
         <h2 class="places__caption">Места<br> посещения</h2>
         <p class="places__description">Вы можете выбрать полный тур или
           <br> частичный, с посещением первых 3 мест</p>
-          <ul class="places__list">
-            <li>
-              <a href="#" class="places__country-card">
-                <img src="img/greece-350-430.jpg" alt="Вид Греции"  width="350" height="430">
-                <p class="places__country-name">Греция</p>
-              </a>
-            </li>
-            <li>
-              <a href="#" class="places__country-card">
-                <img src="img/albania-350-430.jpg" alt="Вид Албании"  width="350" height="430">
-                <p class="places__country-name">Албания</p>
-              </a>
-            </li>
-            <li>
-              <a href="#" class="places__country-card">
-                <img src="img/makedonia-350-430.jpg" alt="Вид Македонии"  width="350" height="430">
-                <p class="places__country-name">Македония</p>
-              </a>
-            </li>
-            <li>
-              <a href="#" class="places__country-card">
-                <img src="img/montenegro-350-430.jpg" alt="Вид Черногории"  width="350" height="430">
-                <p class="places__country-name">Черногория</p>
-              </a>
-            </li>
-            <li>
-              <a href="#" class="places__country-card">
-                <img src="img/croatia-350-430.jpg" alt="Вид Хорватии"  width="350" height="430">
-                <p class="places__country-name">Хорватия</p>
-              </a>
-            </li>
-          </ul>
+        <ul class="places__list">
+          <li>
+            <a href="#" class="places__country-card">
+              <img src="img/greece-350-430.jpg" alt="Вид Греции" width="350" height="430">
+              <p class="places__country-name">Греция</p>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="places__country-card">
+              <img src="img/albania-350-430.jpg" alt="Вид Албании" width="350" height="430">
+              <p class="places__country-name">Албания</p>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="places__country-card">
+              <img src="img/makedonia-350-430.jpg" alt="Вид Македонии" width="350" height="430">
+              <p class="places__country-name">Македония</p>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="places__country-card">
+              <img src="img/montenegro-350-430.jpg" alt="Вид Черногории" width="350" height="430">
+              <p class="places__country-name">Черногория</p>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="places__country-card">
+              <img src="img/croatia-350-430.jpg" alt="Вид Хорватии" width="350" height="430">
+              <p class="places__country-name">Хорватия</p>
+            </a>
+          </li>
+        </ul>
       </section>
       <section class="main__detals detals">
         <h2 class="visually-hidden">Подробно о достопримечательностях стран куда можно купить тур</h2>
         <ul class="detals__tab-buttons">
-          <li class="detals__tab-button detals__tab-button--active" data-country ="1">Греция</li>
-          <li class="detals__tab-button" data-country ="2">Албания</li>
-          <li class="detals__tab-button" data-country ="3">Македония</li>
-          <li class="detals__tab-button" data-country ="4">Черногория</li>
-          <li class="detals__tab-button" data-country ="5">Хорватия</li>
+          <li class="detals__tab-button detals__tab-button--active" data-country="1">Греция</li>
+          <li class="detals__tab-button" data-country="2">Албания</li>
+          <li class="detals__tab-button" data-country="3">Македония</li>
+          <li class="detals__tab-button" data-country="4">Черногория</li>
+          <li class="detals__tab-button" data-country="5">Хорватия</li>
         </ul>
         <ul class="detals__tab-blocks">
-          <li class="detals__tab-block" data-country ="1">
+          <li class="detals__tab-block" data-country="1">
             <article class="detals__country">
               <h3 class="detals__country-caption">Греция</h3>
-              <p class="detals__country-text">На севере Греции находится один из крупнейших комплексов монастырей, расположенных на вершинах скал. Название его «Метеора» буквально переводится как «висящие в воздухе». Этот монастырь основная цель нашего путешествия в Греции. После покарения скал из песчанника и обломочной горной породы, достигающих в высоту 600 метров, наградой будет неописуемая красота природы и атмосфера, царящая в монастырях Метеоры. </p>
+              <p class="detals__country-text">На севере Греции находится один из крупнейших комплексов монастырей,
+                расположенных на вершинах скал. Название его «Метеора» буквально переводится как «висящие в воздухе».
+                Этот монастырь основная цель нашего путешествия в Греции. После покарения скал из песчанника и
+                обломочной горной породы, достигающих в высоту 600 метров, наградой будет неописуемая красота природы и
+                атмосфера, царящая в монастырях Метеоры. </p>
               <a class="detals__country-buy-link">купить тур сейчас</a>
               <div class="detals__country-reviews">
                 <h4 class="detals__reviews-caption">Отзывы</h4>
-                <p class="detals__country-reviews-text">Метеоры в Греции можно сравнить разве что с Монсерратт в Испании. Такие же высоченные скалы. Но здесь потрясает масштаб. Огромная территория, высоко в горах. Ощущение такое, как будто стоишь на краю света! </p>
+                <p class="detals__country-reviews-text">Метеоры в Греции можно сравнить разве что с Монсерратт в
+                  Испании. Такие же высоченные скалы. Но здесь потрясает масштаб. Огромная территория, высоко в горах.
+                  Ощущение такое, как будто стоишь на краю света! </p>
                 <p class="detals__author">
-                  <img class="detals__author-userpic" src="img/golicyna.png" alt="Изображение автора" width="38" height="38">
+                  <img class="detals__author-userpic" src="img/golicyna.png" alt="Изображение автора" width="38"
+                    height="38">
                   <span class="detals__author-name">Влада Голицина</span>
                 </p>
               </div>
             </article>
           </li>
-          <li class="detals__tab-block visually-hidden" data-country ="2">
+          <li class="detals__tab-block visually-hidden" data-country="2">
             <article class="detals__country">
               <h3 class="detals__country-caption">Албания</h3>
-              <p class="detals__country-text">В Албании мы посетим Курорт Ксамиль. Этот курорт поразит вас чистейшей водой и удивительным пляжем. Вначале кажется, что на пляже вас встречает обычный, правда невероятно белоснежный и слишком крупный песок. Однако, присмотревшись, можно понять, что это не песок, а камни, перетёртые до такого мелкого состояния. </p>
+              <p class="detals__country-text">В Албании мы посетим Курорт Ксамиль. Этот курорт поразит вас чистейшей
+                водой и удивительным пляжем. Вначале кажется, что на пляже вас встречает обычный, правда невероятно
+                белоснежный и слишком крупный песок. Однако, присмотревшись, можно понять, что это не песок, а камни,
+                перетёртые до такого мелкого состояния. </p>
               <a class="detals__country-buy-link">купить тур сейчас</a>
               <div class="detals__country-reviews">
                 <h4 class="detals__reviews-caption">Отзывы</h4>
-                <p class="detals__country-reviews-text">Замечательный курорт, обязательно стоит посетить. В следующий раз возьму с собой сестру, чтобы тоже смогла вкусить все красоты природы :)</p>
+                <p class="detals__country-reviews-text">Замечательный курорт, обязательно стоит посетить. В следующий
+                  раз возьму с собой сестру, чтобы тоже смогла вкусить все красоты природы :)</p>
                 <p class="detals__author">
-                  <img class="detals__author-userpic" src="img/marishka.png" alt="Изображение автора" width="38" height="38">
+                  <img class="detals__author-userpic" src="img/marishka.png" alt="Изображение автора" width="38"
+                    height="38">
                   <span class="detals__author-name">Маришка</span>
                 </p>
               </div>
             </article>
           </li>
-          <li class="detals__tab-block visually-hidden" data-country ="3"><article class="detals__country">
-            <h3 class="detals__country-caption">Македония</h3>
-            <p class="detals__country-text">В Македонии нашей целью будет посетить Палаошник, который расположился в удивительно красивой лесистой местности возле Охридского озера и Самуиловой твердыни. А также мы заберемся на вершину горы Татичев Камен где находится  археологический памятник Кокино в длину около 100 метров.</p>
-            <a class="detals__country-buy-link">купить тур сейчас</a>
-            <div class="detals__country-reviews">
-              <h4 class="detals__reviews-caption">Отзывы</h4>
-              <p class="detals__country-reviews-text">Я бы сказал необычное старое здание. В архитектуре я не разбираюсь, но подъем в гору был очень веселым так как люди оказались легкими и заводными. Красота природы впечатлила, особенно после долгого пути в гору.</p>
-              <p class="detals__author">
-                <img class="detals__author-userpic" src="img/kuzmin.png" alt="Изображение автора" width="38" height="38">
-                <span class="detals__author-name">Михаил Кузьмин</span>
-              </p>
-            </div>
-          </article></li>
-          <li class="detals__tab-block visually-hidden" data-country ="4"><article class="detals__country">
-            <h3 class="detals__country-caption">Черногория</h3>
-            <p class="detals__country-text">Черногория удивит нас самым большим в Европе каньоном реки Тара, который в некоторых местах высотой берегов доходит до 1300 метров, а шириной не превышает трех. При этом длина каньона составляет 80 км. </p>
-            <a class="detals__country-buy-link">купить тур сейчас</a>
-            <div class="detals__country-reviews">
-              <h4 class="detals__reviews-caption">Отзывы</h4>
-              <p class="detals__country-reviews-text">Неописуемой красоты каньон! Ничего прекраснее в жизни не видела, разве что в фильмах :) Всем советую</p>
-              <p class="detals__author">
-                <img class="detals__author-userpic" src="img/may.png" alt="Изображение автора" width="38" height="38">
-                <span class="detals__author-name">Анастасия Мей</span>
-              </p>
-            </div>
-          </article>
-        </li>
-          <li class="detals__tab-block visually-hidden" data-country ="5">
+          <li class="detals__tab-block visually-hidden" data-country="3">
             <article class="detals__country">
-              <h3 class="detals__country-caption">Хорватия</h3>
-              <p class="detals__country-text">В Хорватии мы посетим необычайную пещеру названную Бередине. Ее подземный мир увлечет вас на 80-ти метровую глубину через 5 освещенных залов, украшенных удивительными нерукотворными скульптурами —  сталактитами и сталагмитами —  формировавшимися тысячи и тысячи лет.</p>
+              <h3 class="detals__country-caption">Македония</h3>
+              <p class="detals__country-text">В Македонии нашей целью будет посетить Палаошник, который расположился в
+                удивительно красивой лесистой местности возле Охридского озера и Самуиловой твердыни. А также мы
+                заберемся на вершину горы Татичев Камен где находится археологический памятник Кокино в длину около 100
+                метров.</p>
               <a class="detals__country-buy-link">купить тур сейчас</a>
               <div class="detals__country-reviews">
                 <h4 class="detals__reviews-caption">Отзывы</h4>
-                <p class="detals__country-reviews-text">Мы поехали всей семьей, я, моя жена и родители. Пещера просто незабываема! А то, что все это формировалось тысячелетиями, мега необычно. Первоначально даже не верилось, но натур ни с чем не спутать по итогу :)</p>
+                <p class="detals__country-reviews-text">Я бы сказал необычное старое здание. В архитектуре я не
+                  разбираюсь, но подъем в гору был очень веселым так как люди оказались легкими и заводными. Красота
+                  природы впечатлила, особенно после долгого пути в гору.</p>
                 <p class="detals__author">
-                  <img class="detals__author-userpic" src="img/mulicyn.png" alt="Изображение автора" width="38" height="38">
+                  <img class="detals__author-userpic" src="img/kuzmin.png" alt="Изображение автора" width="38"
+                    height="38">
+                  <span class="detals__author-name">Михаил Кузьмин</span>
+                </p>
+              </div>
+            </article>
+          </li>
+          <li class="detals__tab-block visually-hidden" data-country="4">
+            <article class="detals__country">
+              <h3 class="detals__country-caption">Черногория</h3>
+              <p class="detals__country-text">Черногория удивит нас самым большим в Европе каньоном реки Тара, который в
+                некоторых местах высотой берегов доходит до 1300 метров, а шириной не превышает трех. При этом длина
+                каньона составляет 80 км. </p>
+              <a class="detals__country-buy-link">купить тур сейчас</a>
+              <div class="detals__country-reviews">
+                <h4 class="detals__reviews-caption">Отзывы</h4>
+                <p class="detals__country-reviews-text">Неописуемой красоты каньон! Ничего прекраснее в жизни не видела,
+                  разве что в фильмах :) Всем советую</p>
+                <p class="detals__author">
+                  <img class="detals__author-userpic" src="img/may.png" alt="Изображение автора" width="38" height="38">
+                  <span class="detals__author-name">Анастасия Мей</span>
+                </p>
+              </div>
+            </article>
+          </li>
+          <li class="detals__tab-block visually-hidden" data-country="5">
+            <article class="detals__country">
+              <h3 class="detals__country-caption">Хорватия</h3>
+              <p class="detals__country-text">В Хорватии мы посетим необычайную пещеру названную Бередине. Ее подземный
+                мир увлечет вас на 80-ти метровую глубину через 5 освещенных залов, украшенных удивительными
+                нерукотворными скульптурами — сталактитами и сталагмитами — формировавшимися тысячи и тысячи лет.</p>
+              <a class="detals__country-buy-link">купить тур сейчас</a>
+              <div class="detals__country-reviews">
+                <h4 class="detals__reviews-caption">Отзывы</h4>
+                <p class="detals__country-reviews-text">Мы поехали всей семьей, я, моя жена и родители. Пещера просто
+                  незабываема! А то, что все это формировалось тысячелетиями, мега необычно. Первоначально даже не
+                  верилось, но натур ни с чем не спутать по итогу :)</p>
+                <p class="detals__author">
+                  <img class="detals__author-userpic" src="img/mulicyn.png" alt="Изображение автора" width="38"
+                    height="38">
                   <span class="detals__author-name">Владимир Мулицин</span>
                 </p>
               </div>
@@ -250,13 +279,15 @@
       </section>
       <section class="footer__contacts">
         <h3 class="footer__caption">Наши контакты</h3>
-        <p><a class="footer__contacts-email" href="mailto:puteshestviemechta@gmail.ru">puteshestviemechta@gmail.ru</a></p>
+        <p><a class="footer__contacts-email" href="mailto:puteshestviemechta@gmail.ru">puteshestviemechta@gmail.ru</a>
+        </p>
         <p><a class="footer__contacts-tel" href="tel:+749978468446">+7 (499) -784-684-46</a></p>
 
       </section>
       <section class="footer__corporative-offers">
         <h3 class="footer__caption">Корпоративные путешествия</h3>
-        <p class="footer__corporative-offers-description">Также вы можете заказать индивидуальное путешествие под вашу компанию. Подобные туры очень сближают компанию,
+        <p class="footer__corporative-offers-description">Также вы можете заказать индивидуальное путешествие под вашу
+          компанию. Подобные туры очень сближают компанию,
           помогают поддерживать корпоративный дух, а также являются оличным времяпрепровождением</p>
       </section>
     </footer>
