--- a/source/index.html
+++ b/source/index.html
@@ -129,7 +129,7 @@
                   обломочной горной породы, достигающих в высоту 600 метров, наградой будет неописуемая красота природы
                   и
                   атмосфера, царящая в монастырях Метеоры. </p>
-                <a class="detals__country-buy-link">купить тур сейчас</a>
+                <a class="detals__country-buy-link buy-link">купить тур сейчас</a>
               </div>
               <picture>
                 <source media="(max-width: 767px)" srcset="img/greece-img-320-415.jpg">
@@ -158,7 +158,7 @@
                   водой и удивительным пляжем. Вначале кажется, что на пляже вас встречает обычный, правда невероятно
                   белоснежный и слишком крупный песок. Однако, присмотревшись, можно понять, что это не песок, а камни,
                   перетёртые до такого мелкого состояния. </p>
-                <a class="detals__country-buy-link">купить тур сейчас</a>
+                <a class="detals__country-buy-link buy-link">купить тур сейчас</a>
               </div>
               <picture>
                 <source media="(max-width: 767px)" srcset="img/albania-img-320-415.jpg">
@@ -187,7 +187,7 @@
                   заберемся на вершину горы Татичев Камен где находится археологический памятник Кокино в длину около
                   100
                   метров.</p>
-                <a class="detals__country-buy-link">купить тур сейчас</a>
+                <a class="detals__country-buy-link buy-link">купить тур сейчас</a>
               </div>
               <picture>
                 <source media="(max-width: 767px)" srcset="img/makedonia-img-320-415.jpg">
@@ -216,7 +216,7 @@
                   в
                   некоторых местах высотой берегов доходит до 1300 метров, а шириной не превышает трех. При этом длина
                   каньона составляет 80 км. </p>
-                <a class="detals__country-buy-link">купить тур сейчас</a>
+                <a class="detals__country-buy-link buy-link">купить тур сейчас</a>
               </div>
               <picture>
                 <source media="(max-width: 767px)" srcset="img/montenegro-img-320-415.jpg">
@@ -243,7 +243,7 @@
                   подземный
                   мир увлечет вас на 80-ти метровую глубину через 5 освещенных залов, украшенных удивительными
                   нерукотворными скульптурами — сталактитами и сталагмитами — формировавшимися тысячи и тысячи лет.</p>
-                <a class="detals__country-buy-link">купить тур сейчас</a>
+                <a class="detals__country-buy-link buy-link">купить тур сейчас</a>
               </div>
               <picture>
                 <source media="(max-width: 767px)" srcset="img/croatia-img-320-415.jpg">
@@ -283,7 +283,7 @@
             <li class="prices__offer-item">Экскурсии по удивительно красивым местам Европы
             </li>
           </ul>
-          <a class="prices__buy-link" href="#">купить тур сейчас</a>
+          <a class="prices__buy-link buy-link" href="#">купить тур сейчас</a>
         </div>
         <div class="prices__offer" tabindex="0">
           <h2 class="visually-hidden">Экономныйный тариф</h2>
@@ -300,7 +300,7 @@
             <li class="prices__offer-item">Экскурсии по удивительно красивым местам Европы
             </li>
           </ul>
-          <a class="prices__buy-link" href="#">купить тур сейчас</a>
+          <a class="prices__buy-link buy-link" href="#">купить тур сейчас</a>
         </div>
         <div class="prices__offer prices__offer--reach-agreement">
           <h2 class="prices__capture">Цены</h2>
@@ -332,6 +332,37 @@
         </div>
 
       </section>
+      <div class="main__buy main__buy--closed">
+
+        <div class="main__buy-container">
+          <div class="main__buy-inner-container">
+            <button class="main__buy-close-button" aria-label="Кнопка закрытия модального окна">
+            </button>
+            <h3 class="main__buy-caption">Купить тур</h3>
+            <form class="main__buy-form" method="post" action="https://echo.htmlacademy.ru">
+              <div class="main__buy-inner-wrapper">
+                <p class="main__buy-input-container main__buy-input-container--formcontact-tel">
+                  <input class="main__buy-field main__buy-field--tel" type="tel" name="tel"
+                    placeholder="+7 Введите 10 цифр номера" required>
+                </p>
+                <p class="main__buy-input-container">
+                  <input class="main__buy-field main__buy-field--email" type="email" name="email" placeholder="E-mail">
+                </p>
+                <button class="main__buy-button">Отправить</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+      <div class="main__success main__success--closed">
+        <div class="main__success-container">
+          <button class="main__success-close-button" aria-label="Кнопка закрытия модального окна">
+          </button>
+          <p class="main__success-message">
+            Форма успешно отправлена, спасибо! :)
+          </p>
+        </div>
+      </div>
     </main>
 
     <footer class="page__footer footer">
@@ -385,6 +416,7 @@
     </footer>
   </div>
   <script src="js/popup-script.js"></script>
+  <script src="js/buy-feedback-script.js"></script>
 </body>
 
 </html>
