Add adaptive pictures

--- a/source/index.html
+++ b/source/index.html
@@ -61,8 +61,10 @@
             <a href="#greece" class="places__country-card">
               <span class="places__look-more">смотреть подробнее</span>
               <picture>
-                <source media="(max-width: 769px)" srcset="img/greece-288-425.jpg">
-                <img src="img/greece-350-430.jpg" width="350" height="430" alt="Вид Греции">
+                <!-- <source type="image/webp" media="(min-width: 769px)" srcset="img/greece-288-425.webp 1x, img/greece-288-425-2x.webp 2x"> -->
+                <!-- <source type="image/webp" srcset="img/greece-350-430.webp 1x, img/greece-350-430-2x.webp 2x"> -->
+                <source media="(max-width: 769px)" srcset="img/greece-288-425.jpg 1x, img/greece-288-425-2x.jpg 2x">
+                <img src="img/greece-350-430.jpg" srcset="img/greece-350-430-2x.jpg 2x" width="350" height="430" alt="Вид Греции">
               </picture>
               <p class="places__country-name">Греция</p>
             </a>
@@ -71,8 +73,10 @@
             <a href="#albania" class="places__country-card">
               <span class="places__look-more">смотреть подробнее</span>
               <picture>
-                <source media="(max-width: 769px)" srcset="img/albania-288-425.jpg">
-                <img src="img/albania-350-430.jpg" width="350" height="430" alt="Вид Албании">
+                <!-- <source type="image/webp" media="(min-width: 769px)" srcset="img/albania-288-425.webp 1x, img/albania-288-425-2x.webp 2x"> -->
+                <!-- <source type="image/webp" srcset="img/albania-350-430.webp 1x, img/albania-350-430-2x.webp 2x"> -->
+                <source media="(max-width: 769px)" srcset="img/albania-288-425.jpg 1x, img/albania-288-425-2x.jpg 2x">
+                <img src="img/albania-350-430.jpg" srcset="img/albania-350-430-2x.jpg 2x" width="350" height="430" alt="Вид Албании">
               </picture>
               <p class="places__country-name">Албания</p>
             </a>
@@ -81,8 +85,10 @@
             <a href="#makedonia" class="places__country-card">
               <span class="places__look-more">смотреть подробнее</span>
               <picture>
-                <source media="(max-width: 769px)" srcset="img/makedonia-288-425.jpg">
-                <img src="img/makedonia-350-430.jpg" width="350" height="430" alt="Вид Македонии">
+                <!-- <source type="image/webp" media="(min-width: 769px)" srcset="img/makedonia-288-425.webp 1x, img/makedonia-288-425-2x.webp 2x"> -->
+                <!-- <source type="image/webp" srcset="img/makedonia-350-430.webp 1x, img/makedonia-350-430-2x.webp 2x"> -->
+                <source media="(max-width: 769px)" srcset="img/makedonia-288-425.jpg 1x, img/makedonia-288-425-2x.jpg 2x">
+                <img src="img/makedonia-350-430.jpg" srcset="img/makedonia-350-430-2x.jpg 2x" width="350" height="430" alt="Вид Македонии">
               </picture>
               <p class="places__country-name">Македония</p>
             </a>
@@ -91,8 +97,10 @@
             <a href="#montenegro" class="places__country-card">
               <span class="places__look-more">смотреть подробнее</span>
               <picture>
-                <source media="(max-width: 769px)" srcset="img/montenegro-288-425.jpg">
-                <img src="img/montenegro-350-430.jpg" width="350" height="430" alt="Вид Черногории">
+                <!-- <source type="image/webp" media="(min-width: 769px)" srcset="img/montenegro-288-425.webp 1x, img/montenegro-288-425-2x.webp 2x"> -->
+                <!-- <source type="image/webp" srcset="img/montenegro-350-430.webp 1x, img/montenegro-350-430-2x.webp 2x"> -->
+                <source media="(max-width: 769px)" srcset="img/montenegro-288-425.jpg 1x, img/montenegro-288-425-2x.jpg 2x">
+                <img src="img/montenegro-350-430.jpg" srcset="img/montenegro-350-430-2x.jpg 2x" width="350" height="430" alt="Вид Черногории">
               </picture>
               <p class="places__country-name">Черногория</p>
             </a>
@@ -101,8 +109,10 @@
             <a href="#croatia" class="places__country-card">
               <span class="places__look-more">смотреть подробнее</span>
               <picture>
-                <source media="(max-width: 769px)" srcset="img/croatia-288-425.jpg">
-                <img src="img/croatia-350-430.jpg" width="350" height="430" alt="Вид Хорватии">
+                <!-- <source type="image/webp" media="(min-width: 769px)" srcset="img/croatia-288-425.webp 1x, img/croatia-288-425-2x.webp 2x"> -->
+                <!-- <source type="image/webp" srcset="img/croatia-350-430.webp 1x, img/croatia-350-430-2x.webp 2x"> -->
+                <source media="(max-width: 769px)" srcset="img/croatia-288-425.jpg 1x, img/croatia-288-425-2x.jpg 2x">
+                <img src="img/croatia-350-430.jpg" srcset="img/croatia-350-430-2x.jpg 2x" width="350" height="430" alt="Вид Хорватии">
               </picture>
               <p class="places__country-name">Хорватия</p>
             </a>
