Add build settings

--- a/source/index.html
+++ b/source/index.html
@@ -9,8 +9,8 @@
   <link rel="preload" href="fonts/montserrat-500.woff2" as="font">
   <link rel="preload" href="fonts/montserrat-600.woff2" as="font">
   <link rel="preload" href="fonts/montserrat-700.woff2" as="font">
-  <link rel="stylesheet" href="css/style.css">
-  <!-- <link rel="stylesheet" href="css/style.min.css"> -->
+  <!-- <link rel="stylesheet" href="css/style.css"> -->
+  <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body class="page">
@@ -61,10 +61,11 @@
             <a href="#greece" class="places__country-card">
               <span class="places__look-more">смотреть подробнее</span>
               <picture>
-                <!-- <source type="image/webp" media="(min-width: 769px)" srcset="img/greece-288-425.webp 1x, img/greece-288-425-2x.webp 2x"> -->
-                <!-- <source type="image/webp" srcset="img/greece-350-430.webp 1x, img/greece-350-430-2x.webp 2x"> -->
+                <source type="image/webp" media="(min-width: 769px)" srcset="img/greece-288-425.webp 1x, img/greece-288-425-2x.webp 2x">
+                <source type="image/webp" srcset="img/greece-350-430.webp 1x, img/greece-350-430-2x.webp 2x">
                 <source media="(max-width: 769px)" srcset="img/greece-288-425.jpg 1x, img/greece-288-425-2x.jpg 2x">
-                <img src="img/greece-350-430.jpg" srcset="img/greece-350-430-2x.jpg 2x" width="350" height="430" alt="Вид Греции">
+                <img src="img/greece-350-430.jpg" srcset="img/greece-350-430-2x.jpg 2x" width="350" height="430"
+                  alt="Вид Греции">
               </picture>
               <p class="places__country-name">Греция</p>
             </a>
@@ -73,10 +74,11 @@
             <a href="#albania" class="places__country-card">
               <span class="places__look-more">смотреть подробнее</span>
               <picture>
-                <!-- <source type="image/webp" media="(min-width: 769px)" srcset="img/albania-288-425.webp 1x, img/albania-288-425-2x.webp 2x"> -->
-                <!-- <source type="image/webp" srcset="img/albania-350-430.webp 1x, img/albania-350-430-2x.webp 2x"> -->
+                <source type="image/webp" media="(min-width: 769px)" srcset="img/albania-288-425.webp 1x, img/albania-288-425-2x.webp 2x">
+                <source type="image/webp" srcset="img/albania-350-430.webp 1x, img/albania-350-430-2x.webp 2x">
                 <source media="(max-width: 769px)" srcset="img/albania-288-425.jpg 1x, img/albania-288-425-2x.jpg 2x">
-                <img src="img/albania-350-430.jpg" srcset="img/albania-350-430-2x.jpg 2x" width="350" height="430" alt="Вид Албании">
+                <img src="img/albania-350-430.jpg" srcset="img/albania-350-430-2x.jpg 2x" width="350" height="430"
+                  alt="Вид Албании">
               </picture>
               <p class="places__country-name">Албания</p>
             </a>
@@ -85,10 +87,12 @@
             <a href="#makedonia" class="places__country-card">
               <span class="places__look-more">смотреть подробнее</span>
               <picture>
-                <!-- <source type="image/webp" media="(min-width: 769px)" srcset="img/makedonia-288-425.webp 1x, img/makedonia-288-425-2x.webp 2x"> -->
-                <!-- <source type="image/webp" srcset="img/makedonia-350-430.webp 1x, img/makedonia-350-430-2x.webp 2x"> -->
-                <source media="(max-width: 769px)" srcset="img/makedonia-288-425.jpg 1x, img/makedonia-288-425-2x.jpg 2x">
-                <img src="img/makedonia-350-430.jpg" srcset="img/makedonia-350-430-2x.jpg 2x" width="350" height="430" alt="Вид Македонии">
+                <source type="image/webp" media="(min-width: 769px)" srcset="img/makedonia-288-425.webp 1x, img/makedonia-288-425-2x.webp 2x">
+                <source type="image/webp" srcset="img/makedonia-350-430.webp 1x, img/makedonia-350-430-2x.webp 2x">
+                <source media="(max-width: 769px)"
+                  srcset="img/makedonia-288-425.jpg 1x, img/makedonia-288-425-2x.jpg 2x">
+                <img src="img/makedonia-350-430.jpg" srcset="img/makedonia-350-430-2x.jpg 2x" width="350" height="430"
+                  alt="Вид Македонии">
               </picture>
               <p class="places__country-name">Македония</p>
             </a>
@@ -97,10 +101,12 @@
             <a href="#montenegro" class="places__country-card">
               <span class="places__look-more">смотреть подробнее</span>
               <picture>
-                <!-- <source type="image/webp" media="(min-width: 769px)" srcset="img/montenegro-288-425.webp 1x, img/montenegro-288-425-2x.webp 2x"> -->
-                <!-- <source type="image/webp" srcset="img/montenegro-350-430.webp 1x, img/montenegro-350-430-2x.webp 2x"> -->
-                <source media="(max-width: 769px)" srcset="img/montenegro-288-425.jpg 1x, img/montenegro-288-425-2x.jpg 2x">
-                <img src="img/montenegro-350-430.jpg" srcset="img/montenegro-350-430-2x.jpg 2x" width="350" height="430" alt="Вид Черногории">
+                <source type="image/webp" media="(min-width: 769px)" srcset="img/montenegro-288-425.webp 1x, img/montenegro-288-425-2x.webp 2x">
+                <source type="image/webp" srcset="img/montenegro-350-430.webp 1x, img/montenegro-350-430-2x.webp 2x">
+                <source media="(max-width: 769px)"
+                  srcset="img/montenegro-288-425.jpg 1x, img/montenegro-288-425-2x.jpg 2x">
+                <img src="img/montenegro-350-430.jpg" srcset="img/montenegro-350-430-2x.jpg 2x" width="350" height="430"
+                  alt="Вид Черногории">
               </picture>
               <p class="places__country-name">Черногория</p>
             </a>
@@ -109,10 +115,11 @@
             <a href="#croatia" class="places__country-card">
               <span class="places__look-more">смотреть подробнее</span>
               <picture>
-                <!-- <source type="image/webp" media="(min-width: 769px)" srcset="img/croatia-288-425.webp 1x, img/croatia-288-425-2x.webp 2x"> -->
-                <!-- <source type="image/webp" srcset="img/croatia-350-430.webp 1x, img/croatia-350-430-2x.webp 2x"> -->
+                <source type="image/webp" media="(min-width: 769px)" srcset="img/croatia-288-425.webp 1x, img/croatia-288-425-2x.webp 2x">
+                <source type="image/webp" srcset="img/croatia-350-430.webp 1x, img/croatia-350-430-2x.webp 2x">
                 <source media="(max-width: 769px)" srcset="img/croatia-288-425.jpg 1x, img/croatia-288-425-2x.jpg 2x">
-                <img src="img/croatia-350-430.jpg" srcset="img/croatia-350-430-2x.jpg 2x" width="350" height="430" alt="Вид Хорватии">
+                <img src="img/croatia-350-430.jpg" srcset="img/croatia-350-430-2x.jpg 2x" width="350" height="430"
+                  alt="Вид Хорватии">
               </picture>
               <p class="places__country-name">Хорватия</p>
             </a>
@@ -425,8 +432,7 @@
       </section>
     </footer>
   </div>
-  <script src="js/popup-script.js"></script>
-  <script src="js/buy-feedback-script.js"></script>
+  <script src="js/script.min.js"></script>
 </body>
 
 </html>
